// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Card test Preview is ok 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card projectCard previewProjectCard"
    data-testid="project-card-dummy_nametestOrg"
  >
    <div
      class="StyledProps--font StyledProps--main projectInfo StyledProps--padding-xlarge"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="colorBar"
          style="background-color: rgb(0, 99, 247);"
        />
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
          style="--text-line-clamp: 1;"
        >
          dummy name
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main projectId StyledProps--font-variation-small StyledProps--margin-top-xsmall StyledProps--color StyledProps--color-grey700"
          style="--text-line-clamp: 1;"
        >
          idLabel
        </p>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            >
              adminLabel (1)
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="AvatarGroup--stack projectAvatarGroup"
                style="--avatar-over-lap: -13px;"
              >
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        +
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                  uuid="19bYA-ooQZOTZQxf2N-VPA"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        E
                      </div>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            >
              collaboratorsLabel (5)
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="AvatarGroup--stack projectAvatarGroup"
                style="--avatar-over-lap: -13px;"
              >
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        +
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                  uuid="BnTbQTIJS4SkadzYv0BcbA"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        E
                      </div>
                    </span>
                  </span>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                + 4
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main started StyledProps--padding-top-xlarge"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-xsmall"
          >
            modules
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="cd-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M26.4266 7.06093c1.604.9082 2.5891 2.61496 2.5732 4.45817l-.077 8.9346c-.0155 1.7969-.9805 3.4516-2.5368 4.3499l-8.002 4.6187c-1.5563.8983-3.4717.9062-5.0355.0208l-7.77508-4.4024c-1.60398-.9082-2.58912-2.6149-2.57323-4.4581l.07702-8.9347c.01549-1.79688.98045-3.45151 2.53678-4.34982L13.616 2.67935c1.5563-.89831 3.4717-.90623 5.0355-.02083l7.7751 4.40241Zm-2.829 6.93717c-.4206 1.5856-2.0293 2.5375-3.6019 2.1409l-7.4887-2.0259c-1.2333-.3339-2.51707-.1628-3.6202.48-1.10295.6428-1.89161 1.6795-2.22178 2.9246-.33051 1.2454-.16137 2.5454.47878 3.6646.64015 1.1192 1.67111 1.9171 2.9048 2.2508 1.2334.334 2.5171.1629 3.6201-.4798 1.1031-.6429 1.8918-1.6796 2.2219-2.9247l.2612-1.0464c.0329-.1321-.0459-.2662-.1773-.3018l-1.258-.3405c-.1352-.0366-.274.045-.3079.1809l-.2553 1.0238c-.4259 1.6026-2.0645 2.5569-3.6515 2.1278-1.58229-.4285-2.52298-2.0732-2.09943-3.6705.42065-1.5857 2.02953-2.5383 3.60213-2.1417l7.4885 2.0266c1.2333.3339 2.5171.1629 3.6202-.48 1.103-.6427 1.8916-1.6795 2.2218-2.9246.3305-1.2453.1613-2.5454-.4788-3.6645-.6402-1.11922-1.6711-1.91714-2.9048-2.25088-1.2334-.33394-2.5171-.16289-3.6201.47987-1.1031.64287-1.8918 1.67961-2.2219 2.92471l-.2471.8272c-.0402.1347.0385.2761.1742.3128l1.2581.3405c.1309.0354.2661-.0398.3049-.1697l.2472-.8269c.4259-1.6026 2.0645-2.55683 3.6515-2.1277 1.5823.4284 2.523 2.0731 2.0994 3.6705Z"
                  fill="url(#a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="a"
                    x1="6.7737"
                    x2="21.5"
                    y1="2"
                    y2="30"
                  >
                    <stop
                      stop-color="#62F91F"
                    />
                    <stop
                      offset="1"
                      stop-color="#45BD35"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ci-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M29 16c0 1.6038-.3111 3.1631-.8544 4.5992-.0998.2637-.4365.3299-.6371.1317l-3.989-3.9409c-.1664-.1644-.1943-.4212-.0858-.6285.4326-.8268.6489-1.7725.6489-2.7615.0565-3.2217-2.6-5.87826-5.8783-5.87826-1.0408 0-1.9947.26076-2.8235.70606-.204.10961-.458.08344-.6229-.07926L11.207 4.64368c-.2503-.24699-.1738-.66779.1545-.79382C12.8053 3.29544 14.3394 3 16 3c7.1783 0 13 5.82174 13 13ZM8.47555 5.42062c.23175-.16331.54614-.12936.74662.07111l4.03533 4.03529c.1783.17831.1939.46028.0539.67008-.6307.9455-.9853 2.0581-.9853 3.2594 0 3.2783 2.6565 5.9348 5.9348 5.9348 1.2013 0 2.3139-.3546 3.2594-.9853.2098-.14.4918-.1244.6701.0539l4.3678 4.3679c.2035.2034.235.5235.0651.7557C24.2247 26.8601 20.3994 29 16 29 8.82174 29 3 23.1783 3 16c0-4.4033 2.14366-8.23149 5.47555-10.57938ZM18.2609 17.1304c2.2043 0 3.9565-1.7521 3.9565-3.9565 0-2.2043-1.7522-3.95651-3.9565-3.95651-2.2044 0-3.9566 1.75221-3.9566 3.95651 0 2.2044 1.7522 3.9565 3.9566 3.9565Z"
                  fill="url(#a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="a"
                    x1="-5.39823"
                    x2="11.3982"
                    y1="11.3982"
                    y2="37.3982"
                  >
                    <stop
                      stop-color="#73DFE7"
                    />
                    <stop
                      offset="1"
                      stop-color="#0095F7"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="cf-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.632 2.07971c-2.82243-.49768-5.51395 1.38693-6.01163 4.20941L2.07971 20.698c-.49768 2.8224 1.38693 5.514 4.20941 6.0116l7.46438 1.3162c.1679.0296.2935-.151.2072-.2981L6.88248 15.6562c-.29658-.4692-.29241-1.3825.05036-1.6001.07852-.0505.31177-.259.31177-.259l.39862-.4359.06546-.0718c.36979-.4065.70389-.7738 1.75973-1.3023l.22718-.0791c1.5487-.4838 2.4098-.4488 3.2711-.4139.8615.035 1.7232.07 3.2734-.4142 1.2722-.3974 2.4293-1.17776 3.0743-1.66713.2862-.21723.7089-.15379.8993.15103l4.5967 7.3608c.143.229.1072.525-.1017.696-.4965.4061-1.5001 1.122-2.8336 1.5385-1.5487.4837-2.4322.4627-3.3158.4417-.8839-.021-1.768-.042-3.3182.4422-1.3142.4105-1.868.9475-2.0695 1.2038-.0485.0616-.0703.2104-.0324.279.3995.7242 2.2948 4.0598 3.7934 6.6936.1472.2588.4018.4378.695.4895l3.0704.5414c2.8224.4977 5.514-1.3869 6.0116-4.2094l2.5407-14.4089c.4977-2.82243-1.3869-5.51395-4.2094-6.01163L10.632 2.07971Z"
                  fill="url(#a)"
                />
                <path
                  d="M16.6465 13.0743c-1.3034.3401-2.0932.3153-2.8829.2906-.7894-.0248-1.5787-.0496-2.8808.2902-.7439.2156-1.1778.592-1.58721 1.072-.05524.0648-.06157.1578-.01723.2305l2.48154 4.0684c.0644.1056.209.1297.3076.055.3732-.2826 1.2802-.9008 2.4193-1.198 1.4688-.3833 2.348-.3747 3.2737-.3657.7169.0069 1.4619.0142 2.5302-.1601.7166-.1169 1.3017-.4284 1.6278-.6356.1658-.1054.2014-.3225.0948-.4875L19.4717 12.3c-.1188-.184-.3687-.2355-.5593-.1276-.4181.2366-1.2035.6248-2.2659.9019Z"
                  fill="url(#b)"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="a"
                    x1="6.83717"
                    x2="23.7805"
                    y1="2"
                    y2="28.2273"
                  >
                    <stop
                      stop-color="#FFC100"
                    />
                    <stop
                      offset="1"
                      stop-color="#E66B35"
                    />
                  </lineargradient>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="b"
                    x1="6.83717"
                    x2="23.7805"
                    y1="2"
                    y2="28.2273"
                  >
                    <stop
                      stop-color="#FFC100"
                    />
                    <stop
                      offset="1"
                      stop-color="#E66B35"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ce-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.8394 26.5523c0 .2761.2238.5.5.5H24.6835v-.0051c3.5119-.1376 6.3167-3.0281 6.3167-6.5737 0-3.4495-2.6549-6.279-6.0329-6.5565-.2398-.0197-.442-.1933-.4922-.4286C23.5628 9.20937 19.7612 6 15.21 6c-5.23211 0-9.47354 4.2414-9.47354 9.4735 0 .0552-.03939.1027-.09349.1135C2.99471 16.119 1 18.458 1 21.2629c0 3.1973 2.59185 5.7892 5.78912 5.7894H13.45c.2761 0 .5-.2239.5-.5V24.984c0-.252-.1881-.4625-.4356-.51-1.0412-.1997-1.9326-.6294-2.5427-1.2443-.5458-.55-.8716-1.2314-.97288-2.0316-.03504-.277.19468-.5054.47378-.5041l1.1137.0052c.2673.0013.4802.2149.5411.4752.2559 1.093 1.2451 1.8129 2.7106 1.8198.571.0027 2.7002-.2641 2.7071-1.7358.0055-1.1769-1.5419-1.6233-3.0059-1.9847-.2495-.0615-.5038-.1243-.758-.1925-1.6559-.4399-3.4076-.9432-3.3977-3.0618.0096-2.0579 1.7418-3.1193 3.5665-3.3355v-1.9735c0-.2761.2238-.5.5-.5h.8875c.2762 0 .5.2239.5.5v2.0272c1.316.2124 3.0881.8785 3.3886 2.9069.0413.2786-.1898.512-.4714.5107l-1.1191-.0052c-.2568-.0012-.4637-.1999-.5405-.4449-.2901-.9266-1.2-1.4883-2.5323-1.4946-.8862-.0041-2.1707.4661-2.1757 1.5402-.0046.9735.7404 1.3051 3.5205 2.0234l.3681.094c.0465.0115.0961.0235.1484.0361 1.0591.2554 3.2322.7795 3.2213 3.1092-.0085 1.8391-1.2649 3.097-3.3644 3.4714-.2503.0446-.4416.2562-.4416.5105v1.557Z"
                  fill="url(#a)"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="a"
                    x1="5.82144"
                    x2="19.2714"
                    y1="4.39288"
                    y2="33.4695"
                  >
                    <stop
                      stop-color="#00CFDE"
                    />
                    <stop
                      offset="1"
                      stop-color="#05A660"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="cv-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M25.9325 24.357C23.5479 27.178 19.9831 28.9694 16 28.9694C12.0168 28.9694 8.45199 27.1779 6.06733 24.3568L12.0925 20.5226C13.1423 21.4244 14.5075 21.9694 16 21.9694C17.4924 21.9694 18.8576 21.4245 19.9074 20.5228L25.9325 24.357ZM26.9991 22.9022L21.0926 19.1435C21.6677 18.2228 22 17.1349 22 15.9694C22 12.9614 19.7866 10.4704 16.8996 10.0364V3C23.6597 3.46205 29 9.09205 29 15.9694C29 18.5181 28.2665 20.8956 26.9991 22.9022ZM15.0996 3.00005C8.33994 3.46248 3 9.09231 3 15.9694C3 18.5181 3.73344 20.8954 5.00078 22.902L10.9073 19.1433C10.3323 18.2226 10 17.1348 10 15.9694C10 12.9617 12.213 10.4709 15.0996 10.0365V3.00005Z"
                  fill="url(#paint0_linear_20630_159361)"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M19.558 13.2859C19.8971 13.6493 19.8775 14.2188 19.5141 14.558L15.2284 18.558C14.8826 18.8807 14.346 18.8807 14.0002 18.558L12.2859 16.958C11.9225 16.6188 11.9029 16.0493 12.2421 15.6859C12.5812 15.3225 13.1507 15.3029 13.5141 15.6421L14.6143 16.6689L18.2859 13.2421C18.6493 12.9029 19.2188 12.9225 19.558 13.2859Z"
                  fill="#AE82FC"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="paint0_linear_20630_159361"
                    x1="7.5"
                    x2="20.9259"
                    y1="3"
                    y2="28.9868"
                  >
                    <stop
                      stop-color="#BEA1FF"
                    />
                    <stop
                      offset="1"
                      stop-color="#8A36FF"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Card test initializes ok  1`] = `
<div>
  <div
    class="bp3-card bp3-interactive bp3-elevation-0 Card--card projectCard Card--interactive"
    data-testid="project-card-dummy_nametestOrg"
    tabindex="0"
  >
    <div
      class="StyledProps--font StyledProps--main projectInfo StyledProps--padding-xlarge"
    >
      <div
        class="Card--cardMenu"
      >
        <div
          class="Card--dots"
        >
          <span
            class="bp3-popover-wrapper bp3-dark"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Card--menu Button--with-current-color Button--round Button--iconOnly Button--without-shadow Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-more StyledProps--main"
                  icon="more"
                >
                  <svg
                    data-icon="more"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      more
                    </desc>
                    <path
                      d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="colorBar"
          style="background-color: rgb(0, 99, 247);"
        />
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
          style="--text-line-clamp: 1;"
        >
          dummy name
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main projectId StyledProps--font-variation-small StyledProps--margin-top-xsmall StyledProps--color StyledProps--color-grey700"
          style="--text-line-clamp: 1;"
        >
          idLabel
        </p>
        <div
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1; display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-small"
              data-icon="union"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 14 15"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7 5.885c1.289 0 2.333-1.106 2.333-2.47C9.333 2.05 8.29.945 7 .945c-1.289 0-2.333 1.105-2.333 2.47 0 1.364 1.044 2.47 2.333 2.47zm0-.823c.86 0 1.556-.737 1.556-1.647S7.859 1.768 7 1.768c-.859 0-1.555.737-1.555 1.647S6.14 5.062 7 5.062zm-2.333 7.41c0 1.365-1.045 2.47-2.334 2.47-1.288 0-2.333-1.105-2.333-2.47 0-1.103.684-2.038 1.627-2.355a6.139 6.139 0 01-.071-.937c0-2.321 1.296-4.323 3.164-5.236.049.236.13.46.237.666-1.586.81-2.701 2.534-2.701 4.57 0 .28.02.555.061.822h.016c1.289 0 2.334 1.106 2.334 2.47zm-.778-.001c0 .91-.697 1.647-1.556 1.647-.859 0-1.555-.737-1.555-1.647s.696-1.647 1.555-1.647c.86 0 1.556.737 1.556 1.647zM14 12.473c0 1.364-1.045 2.47-2.333 2.47-1.289 0-2.334-1.106-2.334-2.47 0-1.365 1.045-2.471 2.334-2.471h.016a5.54 5.54 0 00.061-.822c0-2.036-1.115-3.76-2.7-4.57.107-.206.187-.43.236-.666 1.868.913 3.164 2.915 3.164 5.236 0 .32-.024.632-.071.937.943.317 1.627 1.252 1.627 2.355zm-.778-.002c0 .91-.696 1.647-1.555 1.647-.86 0-1.556-.737-1.556-1.647s.696-1.647 1.556-1.647c.859 0 1.555.737 1.555 1.647zm-3.694.994c.091.22.212.424.357.605a5.2 5.2 0 01-5.77 0 2.5 2.5 0 00.357-.605c.736.495 1.605.78 2.528.78s1.792-.285 2.528-.78z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Org Name
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
          >
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tagClassName"
                style="max-width: 75px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag1
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tagClassName"
                style="max-width: 75px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag2:tag3
                </span>
              </span>
            </span>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  tabindex="0"
                >
                  plus3
                </p>
              </span>
            </span>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            >
              adminLabel (1)
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="AvatarGroup--stack projectAvatarGroup"
                style="--avatar-over-lap: -13px;"
              >
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        +
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                  uuid="19bYA-ooQZOTZQxf2N-VPA"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        E
                      </div>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            >
              collaboratorsLabel (5)
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="AvatarGroup--stack projectAvatarGroup"
                style="--avatar-over-lap: -13px;"
              >
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        +
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                  uuid="BnTbQTIJS4SkadzYv0BcbA"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        E
                      </div>
                    </span>
                  </span>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                + 4
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main started StyledProps--padding-top-xlarge"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-xsmall"
          >
            modules
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="cd-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M26.4266 7.06093c1.604.9082 2.5891 2.61496 2.5732 4.45817l-.077 8.9346c-.0155 1.7969-.9805 3.4516-2.5368 4.3499l-8.002 4.6187c-1.5563.8983-3.4717.9062-5.0355.0208l-7.77508-4.4024c-1.60398-.9082-2.58912-2.6149-2.57323-4.4581l.07702-8.9347c.01549-1.79688.98045-3.45151 2.53678-4.34982L13.616 2.67935c1.5563-.89831 3.4717-.90623 5.0355-.02083l7.7751 4.40241Zm-2.829 6.93717c-.4206 1.5856-2.0293 2.5375-3.6019 2.1409l-7.4887-2.0259c-1.2333-.3339-2.51707-.1628-3.6202.48-1.10295.6428-1.89161 1.6795-2.22178 2.9246-.33051 1.2454-.16137 2.5454.47878 3.6646.64015 1.1192 1.67111 1.9171 2.9048 2.2508 1.2334.334 2.5171.1629 3.6201-.4798 1.1031-.6429 1.8918-1.6796 2.2219-2.9247l.2612-1.0464c.0329-.1321-.0459-.2662-.1773-.3018l-1.258-.3405c-.1352-.0366-.274.045-.3079.1809l-.2553 1.0238c-.4259 1.6026-2.0645 2.5569-3.6515 2.1278-1.58229-.4285-2.52298-2.0732-2.09943-3.6705.42065-1.5857 2.02953-2.5383 3.60213-2.1417l7.4885 2.0266c1.2333.3339 2.5171.1629 3.6202-.48 1.103-.6427 1.8916-1.6795 2.2218-2.9246.3305-1.2453.1613-2.5454-.4788-3.6645-.6402-1.11922-1.6711-1.91714-2.9048-2.25088-1.2334-.33394-2.5171-.16289-3.6201.47987-1.1031.64287-1.8918 1.67961-2.2219 2.92471l-.2471.8272c-.0402.1347.0385.2761.1742.3128l1.2581.3405c.1309.0354.2661-.0398.3049-.1697l.2472-.8269c.4259-1.6026 2.0645-2.55683 3.6515-2.1277 1.5823.4284 2.523 2.0731 2.0994 3.6705Z"
                  fill="url(#a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="a"
                    x1="6.7737"
                    x2="21.5"
                    y1="2"
                    y2="30"
                  >
                    <stop
                      stop-color="#62F91F"
                    />
                    <stop
                      offset="1"
                      stop-color="#45BD35"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ci-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M29 16c0 1.6038-.3111 3.1631-.8544 4.5992-.0998.2637-.4365.3299-.6371.1317l-3.989-3.9409c-.1664-.1644-.1943-.4212-.0858-.6285.4326-.8268.6489-1.7725.6489-2.7615.0565-3.2217-2.6-5.87826-5.8783-5.87826-1.0408 0-1.9947.26076-2.8235.70606-.204.10961-.458.08344-.6229-.07926L11.207 4.64368c-.2503-.24699-.1738-.66779.1545-.79382C12.8053 3.29544 14.3394 3 16 3c7.1783 0 13 5.82174 13 13ZM8.47555 5.42062c.23175-.16331.54614-.12936.74662.07111l4.03533 4.03529c.1783.17831.1939.46028.0539.67008-.6307.9455-.9853 2.0581-.9853 3.2594 0 3.2783 2.6565 5.9348 5.9348 5.9348 1.2013 0 2.3139-.3546 3.2594-.9853.2098-.14.4918-.1244.6701.0539l4.3678 4.3679c.2035.2034.235.5235.0651.7557C24.2247 26.8601 20.3994 29 16 29 8.82174 29 3 23.1783 3 16c0-4.4033 2.14366-8.23149 5.47555-10.57938ZM18.2609 17.1304c2.2043 0 3.9565-1.7521 3.9565-3.9565 0-2.2043-1.7522-3.95651-3.9565-3.95651-2.2044 0-3.9566 1.75221-3.9566 3.95651 0 2.2044 1.7522 3.9565 3.9566 3.9565Z"
                  fill="url(#a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="a"
                    x1="-5.39823"
                    x2="11.3982"
                    y1="11.3982"
                    y2="37.3982"
                  >
                    <stop
                      stop-color="#73DFE7"
                    />
                    <stop
                      offset="1"
                      stop-color="#0095F7"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="cf-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.632 2.07971c-2.82243-.49768-5.51395 1.38693-6.01163 4.20941L2.07971 20.698c-.49768 2.8224 1.38693 5.514 4.20941 6.0116l7.46438 1.3162c.1679.0296.2935-.151.2072-.2981L6.88248 15.6562c-.29658-.4692-.29241-1.3825.05036-1.6001.07852-.0505.31177-.259.31177-.259l.39862-.4359.06546-.0718c.36979-.4065.70389-.7738 1.75973-1.3023l.22718-.0791c1.5487-.4838 2.4098-.4488 3.2711-.4139.8615.035 1.7232.07 3.2734-.4142 1.2722-.3974 2.4293-1.17776 3.0743-1.66713.2862-.21723.7089-.15379.8993.15103l4.5967 7.3608c.143.229.1072.525-.1017.696-.4965.4061-1.5001 1.122-2.8336 1.5385-1.5487.4837-2.4322.4627-3.3158.4417-.8839-.021-1.768-.042-3.3182.4422-1.3142.4105-1.868.9475-2.0695 1.2038-.0485.0616-.0703.2104-.0324.279.3995.7242 2.2948 4.0598 3.7934 6.6936.1472.2588.4018.4378.695.4895l3.0704.5414c2.8224.4977 5.514-1.3869 6.0116-4.2094l2.5407-14.4089c.4977-2.82243-1.3869-5.51395-4.2094-6.01163L10.632 2.07971Z"
                  fill="url(#a)"
                />
                <path
                  d="M16.6465 13.0743c-1.3034.3401-2.0932.3153-2.8829.2906-.7894-.0248-1.5787-.0496-2.8808.2902-.7439.2156-1.1778.592-1.58721 1.072-.05524.0648-.06157.1578-.01723.2305l2.48154 4.0684c.0644.1056.209.1297.3076.055.3732-.2826 1.2802-.9008 2.4193-1.198 1.4688-.3833 2.348-.3747 3.2737-.3657.7169.0069 1.4619.0142 2.5302-.1601.7166-.1169 1.3017-.4284 1.6278-.6356.1658-.1054.2014-.3225.0948-.4875L19.4717 12.3c-.1188-.184-.3687-.2355-.5593-.1276-.4181.2366-1.2035.6248-2.2659.9019Z"
                  fill="url(#b)"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="a"
                    x1="6.83717"
                    x2="23.7805"
                    y1="2"
                    y2="28.2273"
                  >
                    <stop
                      stop-color="#FFC100"
                    />
                    <stop
                      offset="1"
                      stop-color="#E66B35"
                    />
                  </lineargradient>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="b"
                    x1="6.83717"
                    x2="23.7805"
                    y1="2"
                    y2="28.2273"
                  >
                    <stop
                      stop-color="#FFC100"
                    />
                    <stop
                      offset="1"
                      stop-color="#E66B35"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ce-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.8394 26.5523c0 .2761.2238.5.5.5H24.6835v-.0051c3.5119-.1376 6.3167-3.0281 6.3167-6.5737 0-3.4495-2.6549-6.279-6.0329-6.5565-.2398-.0197-.442-.1933-.4922-.4286C23.5628 9.20937 19.7612 6 15.21 6c-5.23211 0-9.47354 4.2414-9.47354 9.4735 0 .0552-.03939.1027-.09349.1135C2.99471 16.119 1 18.458 1 21.2629c0 3.1973 2.59185 5.7892 5.78912 5.7894H13.45c.2761 0 .5-.2239.5-.5V24.984c0-.252-.1881-.4625-.4356-.51-1.0412-.1997-1.9326-.6294-2.5427-1.2443-.5458-.55-.8716-1.2314-.97288-2.0316-.03504-.277.19468-.5054.47378-.5041l1.1137.0052c.2673.0013.4802.2149.5411.4752.2559 1.093 1.2451 1.8129 2.7106 1.8198.571.0027 2.7002-.2641 2.7071-1.7358.0055-1.1769-1.5419-1.6233-3.0059-1.9847-.2495-.0615-.5038-.1243-.758-.1925-1.6559-.4399-3.4076-.9432-3.3977-3.0618.0096-2.0579 1.7418-3.1193 3.5665-3.3355v-1.9735c0-.2761.2238-.5.5-.5h.8875c.2762 0 .5.2239.5.5v2.0272c1.316.2124 3.0881.8785 3.3886 2.9069.0413.2786-.1898.512-.4714.5107l-1.1191-.0052c-.2568-.0012-.4637-.1999-.5405-.4449-.2901-.9266-1.2-1.4883-2.5323-1.4946-.8862-.0041-2.1707.4661-2.1757 1.5402-.0046.9735.7404 1.3051 3.5205 2.0234l.3681.094c.0465.0115.0961.0235.1484.0361 1.0591.2554 3.2322.7795 3.2213 3.1092-.0085 1.8391-1.2649 3.097-3.3644 3.4714-.2503.0446-.4416.2562-.4416.5105v1.557Z"
                  fill="url(#a)"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="a"
                    x1="5.82144"
                    x2="19.2714"
                    y1="4.39288"
                    y2="33.4695"
                  >
                    <stop
                      stop-color="#00CFDE"
                    />
                    <stop
                      offset="1"
                      stop-color="#05A660"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="cv-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M25.9325 24.357C23.5479 27.178 19.9831 28.9694 16 28.9694C12.0168 28.9694 8.45199 27.1779 6.06733 24.3568L12.0925 20.5226C13.1423 21.4244 14.5075 21.9694 16 21.9694C17.4924 21.9694 18.8576 21.4245 19.9074 20.5228L25.9325 24.357ZM26.9991 22.9022L21.0926 19.1435C21.6677 18.2228 22 17.1349 22 15.9694C22 12.9614 19.7866 10.4704 16.8996 10.0364V3C23.6597 3.46205 29 9.09205 29 15.9694C29 18.5181 28.2665 20.8956 26.9991 22.9022ZM15.0996 3.00005C8.33994 3.46248 3 9.09231 3 15.9694C3 18.5181 3.73344 20.8954 5.00078 22.902L10.9073 19.1433C10.3323 18.2226 10 17.1348 10 15.9694C10 12.9617 12.213 10.4709 15.0996 10.0365V3.00005Z"
                  fill="url(#paint0_linear_20630_159361)"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M19.558 13.2859C19.8971 13.6493 19.8775 14.2188 19.5141 14.558L15.2284 18.558C14.8826 18.8807 14.346 18.8807 14.0002 18.558L12.2859 16.958C11.9225 16.6188 11.9029 16.0493 12.2421 15.6859C12.5812 15.3225 13.1507 15.3029 13.5141 15.6421L14.6143 16.6689L18.2859 13.2421C18.6493 12.9029 19.2188 12.9225 19.558 13.2859Z"
                  fill="#AE82FC"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="paint0_linear_20630_159361"
                    x1="7.5"
                    x2="20.9259"
                    y1="3"
                    y2="28.9868"
                  >
                    <stop
                      stop-color="#BEA1FF"
                    />
                    <stop
                      offset="1"
                      stop-color="#8A36FF"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
